Cambio a double los montos y precios, y actualizo test
